--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.mylittlenumbers">
+    package="com.example.mylittlenumbers" >
 
     <application
         android:name=".MLNApp"
@@ -13,18 +13,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyLittleNumbers"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".ui.guess_number.GuessNumber"
+            android:name=".ui.game.ariphmetic.AriphmeticActivity"
             android:screenOrientation="landscape"
             android:exported="false" />
         <activity
-            android:name=".ui.LearnNumbers"
-            android:exported="false" />
+            android:name="com.example.mylittlenumbers.ui.game.guess_number.GuessNumber"
+            android:exported="false"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".ui.game.LearnNumbers"
+            android:exported="false"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
